Refactor code for readability and efficiency
Multiple changes have been made to various files, including UserService.java, User.java, SecurityConfig.java, Ajv versions, and others. Key revisions entail improvements in readability through cleaner code formatting, use of more efficient methods, and elimination of unused imports. This refactor enhances overall code structure and performance, early fixes rectify incorrect Ajv dependencies and set correct UUID for user.